@@ -187,6 +187,9 @@ Under Unix, this option does nothing.
 .B \-sort
 Sort files according to their dependencies.
 .TP
+.B \-build\-tree \ path
+Tree where build artifacts are written.
+.TP
 .B \-version
 Print version string and exit.
 .TP
